--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-handlebars": "^8.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.45",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.0",
     "reflect-metadata": "^0.2.2",
